list warehouse bins for offline receiving
